fix after pkg_namechange